fix/model swaggo
